<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="num4">4</string>
    <string name="equal">=</string>
    <string name="div">/</string>
    <string name="dec">.</string>
    <string name="allClear">AC</string>
    <string name="zer">00</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="sub">-</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="multi">X</string>
    <string name="zero">0</string>
    <string name="ob">(</string>
    <string name="cb">)</string>
    <string name="del">Del</string>
</resources>