<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:gravity="end"
            android:hint="@string/zer"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLines="2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainKeypad"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        android:background="@color/orange">

        <LinearLayout
            android:id="@+id/keypad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainKeypad"
            app:layout_constraintBottom_toTopOf="@id/keypad2">

            <Button
                android:id="@+id/allClear"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg"
                android:text="@string/allClear"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/decimal"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/dec"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/div"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg"
                android:text="@string/del"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keypad3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keypad2"
            app:layout_constraintBottom_toTopOf="@id/keypad4">

            <Button
                android:id="@+id/number7"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num7"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number8"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num8"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number9"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num9"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/multiply"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/multi"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keypad4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keypad3"
            app:layout_constraintBottom_toTopOf="@id/keypad5">

            <Button
                android:id="@+id/number4"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num4"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number5"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num5"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num6"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/addition"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keypad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keypad"
            app:layout_constraintBottom_toTopOf="@id/keypad3">

            <Button
                android:id="@+id/number1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num1"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num2"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/number3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/num3"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/subtraction"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/sub"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keypad5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keypad4"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/number0"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/openBracket"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/ob"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/closeBracket"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/cb"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="377dp"/>

            <Button
                android:id="@+id/equal"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg3"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>